load("@rules_cc//cc:defs.bzl", "cc_library")

_internal_hdrs = [
    "include/boost/detail/**/*.hpp",
]

cc_library(
    name = "asio_internal",
    includes = ["include"],
    hdrs = glob(_internal_hdrs),
    defines = ["BOOST_ASIO_SEPARATE_COMPILATION=1"],
    srcs = glob([
        "include/boost/**/*.hpp",
        "include/boost/**/*.ipp",
        "include/boost/**/*.cpp",
    ]),
    deps = [
        "@boost//config",
        "@boost//system",
        "@boost//throw_exception",
        "@boost//assert",
        "@boost//date_time",
        "@boost//smart_ptr",
        "@boost//regex",
    ],
)

cc_library(
    name = "asio",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/**/*.hpp"], exclude = _internal_hdrs),
    strip_include_prefix = "include",
    linkopts = ["-lpthread"],
    deps = [
        ":asio_internal",
        "@boost//bind",
        "@boost//regex",
        "@boost//date_time",
    ],
)
